deploy/cpuhog.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  namespace: kube-alive
  name: cpuhog-deployment
  labels:
    app: cpuhog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cpuhog
  template:
    metadata:
      labels:
        app: cpuhog
    spec:
      containers:
      - name: cpuhog
        image: %%DOCKER_REPO%%/cpuhog%%ARCHSUFFIX%%
        resources:
          requests:
            cpu: "1"
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  namespace: kube-alive
  name: cpuhog
spec:
  selector:
    app: cpuhog
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
