deploy/external-ip.yml
kind: Service
apiVersion: v1
metadata:
  namespace: kube-alive
  name: frontend
spec:
  selector:
    app: frontend
  externalIPs:
  - %%KUBEALIVE_PUBLICIP%%
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
