deploy/frontend.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: kube-alive
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      serviceAccountName: frontend-service-account
      containers:
      - name: frontend
        imagePullPolicy: Always
        image: %%KUBEALIVE_DOCKER_REPO%%/frontend%%BRANCH_SUFFIX%%%%ARCHSUFFIX%%
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  namespace: kube-alive
  name: frontend
spec:
  selector:
    app: frontend
  externalIPs:
  - %%KUBEALIVE_PUBLICIP%%
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
