deploy/healthcheck.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  namespace: kube-alive
  name: healthcheck-deployment
  labels:
    app: healthcheck
spec:
  replicas: 1
  selector:
    matchLabels:
      app: healthcheck
  template:
    metadata:
      namespace: kube-alive
      labels:
        app: healthcheck
    spec:
      containers:
      - name: healthcheck
        image: %%DOCKER_REPO%%/healthcheck
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 1
          failureThreshold: 1
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  namespace: kube-alive
  name: healthcheck
spec:
  selector:
    app: healthcheck
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
